[package]
name = "rudis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
log = "0.4.14"
log4rs = "1.0.0"
tokio = {version = "1.15.0", features = ["full"]}
futures = "0.3.19"
async-recursion = "1.0.0"
config = "0.11.0"
serde = "1.0.133"